# clipy

./: .gitignore  .prettierrc  CONTRIBUTING.md  README.md  eslint.config.js  eslint.config.mjs  forge.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.renderer.config.mts
.github/workflows/: release.yml
scripts/: README.md  languages.config.ts  translate.ts  update-i18n.ts
src/: App.tsx  main.ts  main.tsx  preload.ts  renderer.ts  types.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: download.rs  editor.rs  library.rs  mod.rs  settings.rs  system.rs
src-tauri/src/models/: download.rs  library.rs  mod.rs  project.rs  settings.rs  video.rs
src-tauri/src/services/: binary.rs  cache.rs  config.rs  database.rs  ffmpeg.rs  mod.rs  process_registry.rs  queue.rs  ytdlp.rs
src-tauri/src/utils/: logger.rs  mod.rs  paths.rs  platform.rs  tray.rs  validators.rs
src/assets/: icon.icns
src/components/: VideoPlayer.tsx
src/helpers/: config_helpers.ts  logger.ts  theme_helpers.ts  window_helpers.ts
src/hooks/: index.ts  use-keyboard-shortcuts.ts  use-mobile.ts  useDownload.ts  useEditor.ts  useLibrary.ts  useSettings.ts  useTauri.ts
src/ipc/: channels.ts  context-bridge.ts  core-handlers.ts  download-handlers.ts  video-handlers.ts
src/lib/: constants.ts  logger.ts  utils.ts
src/localization/: i18n.ts  langs.ts  languages.ts
src/pages/: DownloaderPage.tsx  Downloads.tsx  Editor.tsx  EditorPage.tsx  Home.tsx  HomePage.tsx  Library.tsx  LibraryPage.tsx  Settings.tsx  SettingsPage.tsx
src/routes/: __root.tsx  router.tsx  routes.tsx
src/services/: download-manager.ts  download-storage.ts  download_storage.ts  storage-manager.ts  (+3 more)
(+174 files in other folders)
