[package]
name = "clipy"
version = "2.0.0"
description = "Open-source YouTube video downloader and editor"
authors = ["BankkRoll <https://github.com/BankkRoll>"]
license = "MIT"
repository = "https://github.com/BankkRoll/clipy"
edition = "2021"
rust-version = "1.70"

[lib]
name = "clipy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
url = "2"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tempfile = "3"
zip = "2"
opener = "0.7"

# Unix-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"
